--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -51,6 +51,21 @@ dependencies {
     //그래프 그리기 위한 라이브러리
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+    //카메라를 위한 라이브러리
+    implementation "androidx.camera:camera-camera2:1.0.0-beta07"
+    implementation "androidx.camera:camera-core:1.0.0-beta07"
+    implementation "androidx.camera:camera-lifecycle:1.0.0-beta07"
+    implementation "androidx.camera:camera-view:1.0.0-alpha14"
+
+    //tflite 사용을 위한 라이브러리
+    implementation 'org.tensorflow:tensorflow-lite:2.4.0'
+
+    // 얼굴 탐지 모델
+    implementation 'com.google.android.gms:play-services-mlkit-face-detection:16.1.0'
+
+    // 유튜브 실행 라이브러리
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.0.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
