--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-feature android:name="android.hardware.camera.any" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,6 +19,12 @@
         android:theme="@style/Theme.TodayFeeling"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".emotion.YoutubeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".emotion.EmotionClassificationActivity"
+            android:exported="false" />
         <activity
             android:name=".profile.FixGenreActivity"
             android:exported="false" />
