--- a/Flask_server/dockerfile
+++ b/Flask_server/dockerfile
@@ -6,7 +6,6 @@ COPY ./Flask_server Flask_server
 COPY ./Flask_server/.env Flask_server
 WORKDIR /Flask_server/
 RUN pip install -r requirements.txt
-RUN cd app
 EXPOSE 10081
 
-CMD ["python", "run.py"]
+CMD ["python", "app/run.py"]
