--- a/.github/workflows/main-web-update.yml
+++ b/.github/workflows/main-web-update.yml
@@ -1,4 +1,4 @@
-name: flask-main-run-action
+name: web-main-run-action
 on:
   workflow_dispatch:
 
@@ -25,7 +25,7 @@ jobs:
         with:
           context: .
           push: true
-          file: ./web/dockerfile
+          file: ./Web/dockerfile
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/web_sever:latest
       -
         name: Image digest
