--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,9 @@ services:
     ports:
       - "10081:10081"
     container_name: "flask_server"
+    
+  react:
+    image: dksj9921/web_server:v1.0.0
+    ports:
+      - "10086:80"
+    container_name: "web_server"
